force-app/main/default/objects/DrawingWSLink__c/DrawingWSLink__c.object-meta.xml
<CustomObject>
    <label>Drawing WS Link</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drawing WS Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>