force-app/main/default/objects/DrawingWSLink__c/fields/AxLoad_t__c.field-meta.xml
<CustomField>
    <fullName>AxLoad_t__c</fullName>
    <formula>DrawingWSPart__r.AxLoad_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ax. Load (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>