force-app/main/default/objects/DrawingWSLink__c/fields/DiamB__c.field-meta.xml
<CustomField>
    <fullName>DiamB__c</fullName>
    <formula>DrawingWSPart__r.DiamB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diam B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>