force-app/main/default/objects/DrawingWSLink__c/fields/Diameter__c.field-meta.xml
<CustomField>
    <fullName>Diameter__c</fullName>
    <formula>DrawingWSPart__r.Diameter__r.D_mm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ø D (mm)</label>
    <type>Text</type>
</CustomField>