force-app/main/default/objects/DrawingWSLink__c/fields/DiamJ__c.field-meta.xml
<CustomField>
    <fullName>DiamJ__c</fullName>
    <formula>DrawingWSPart__r.DiamJ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diam J</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>