force-app/main/default/objects/DrawingWSLink__c/fields/DrawingVersion__c.field-meta.xml
<CustomField>
    <fullName>DrawingVersion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Draw. Ver.</label>
    <referenceTo>DrawingVersion__c</referenceTo>
    <relationshipLabel>Drawing WS Links (Drawing Version)</relationshipLabel>
    <relationshipName>Drawing_WS_Links</relationshipName>
    <type>Lookup</type>
</CustomField>