force-app/main/default/objects/DrawingWSLink__c/fields/DrawingWS__c.field-meta.xml
<CustomField>
    <fullName>DrawingWS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawing WS</label>
    <referenceTo>DrawingBase__c</referenceTo>
    <relationshipLabel>Drawing WS Links</relationshipLabel>
    <relationshipName>Drawing_WS_Links</relationshipName>
    <type>Lookup</type>
</CustomField>