force-app/main/default/objects/DrawingWSLink__c/fields/DrawingWSPart__c.field-meta.xml
<CustomField>
    <fullName>DrawingWSPart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawing WS Part</label>
    <referenceTo>DrawingVersion__c</referenceTo>
    <relationshipLabel>Drawing WS Links (Drawing Wheel)</relationshipLabel>
    <relationshipName>Drawing_WS_Links1</relationshipName>
    <type>Lookup</type>
</CustomField>