force-app/main/default/objects/DrawingWSLink__c/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <formula>DrawingWSPart__r.Hub__r.HubSize__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hub</label>
    <type>Text</type>
</CustomField>