force-app/main/default/objects/DrawingWSLink__c/fields/Plug__c.field-meta.xml
<CustomField>
    <fullName>Plug__c</fullName>
    <formula>DrawingWSPart__r.PlugType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plug</label>
    <type>Text</type>
</CustomField>