force-app/main/default/objects/DrawingWSLink__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <formula>DrawingWSPart__r.Standard__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard</label>
    <type>Text</type>
</CustomField>