force-app/main/default/objects/DrawingWSLink__c/fields/SteelGrade__c.field-meta.xml
<CustomField>
    <fullName>SteelGrade__c</fullName>
    <formula>DrawingWSPart__r.SteelGrade__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Steel Grade</label>
    <type>Text</type>
</CustomField>