force-app/main/default/objects/DrawingWSLink__c/fields/WeightKG__c.field-meta.xml
<CustomField>
    <fullName>WeightKG__c</fullName>
    <formula>DrawingWSPart__r.WeightKG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight (kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>