force-app/main/default/objects/DrawingWSLink__c/fields/WSPartType__c.field-meta.xml
<CustomField>
    <fullName>WSPartType__c</fullName>
    <formula>DrawingWSPart__r.WheelProduct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WS Part</label>
    <type>Text</type>
</CustomField>