force-app/main/default/objects/DrawingWSLink__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DrawingWS__c</columns>
    <columns>DrawingWSPart__c</columns>
    <columns>WSPartType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>